# pdf-to-markdown

./: README.md
pdftomarkd/: README.md  pyproject.toml
pdftomarkd/src/pdftomarkd/: __init__.py  __main__.py
