[project]
name = "pdf-to-markdown"
version = "0.2.0"
description = "Lightning-fast PDF → Markdown converter with images, metadata, and watch mode"
authors = [{name = "iminierai-aig", email = "iminierai@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pymupdf>=1.24.0",
    "loguru",
    "rich"
]

[project.urls]
Homepage = "https://github.com/iminierai-aig/pdf-to-markdown"
Repository = "https://github.com/iminierai-aig/pdf-to-markdown"

[project.scripts]
pdftomarkd = "pdftomarkd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
